--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
+Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
+Flask-Mail==0.10.0
+Flask-WTF==1.2.2
+SQLAlchemy==2.0.45
+email-validator==2.3.0
+Jinja2==3.1.6
+Werkzeug==3.1.4
+WTForms==3.2.1
 blinker==1.9.0
-charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
+charset-normalizer==3.4.4
 dnspython==2.8.0
-email-validator==2.3.0
-Flask==3.1.2
-Flask-Mail==0.10.0
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
 greenlet==3.3.0
 idna==3.11
 itsdangerous==2.2.0
-Jinja2==3.1.6
 MarkupSafe==3.0.3
 pillow==12.0.0
 reportlab==4.4.6
-SQLAlchemy==2.0.45
 typing_extensions==4.15.0
-Werkzeug==3.1.4
-WTForms==3.2.1
-gunicorn
+gunicorn==23.0.0
+
 
